gramatica/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> init
Rule 1     init -> funciones_structs
Rule 2     funciones_structs -> funciones_structs funcion_struct
Rule 3     funciones_structs -> funcion_struct
Rule 4     funcion_struct -> funcion
Rule 5     funcion -> FN ID PIZQ PDER bloque
Rule 6     funcion -> FN ID PIZQ PDER FLECHA tipo_dato bloque
Rule 7     funcion -> FN ID PIZQ parametros PDER bloque
Rule 8     funcion -> FN ID PIZQ parametros PDER FLECHA tipo_dato bloque
Rule 9     parametros -> parametros COMA parametro
Rule 10    parametros -> parametro
Rule 11    parametro -> ID DOBLEPT tipo_dato
Rule 12    parametro -> ID DOBLEPT Y MUT dimensiones
Rule 13    parametro -> ID DOBLEPT Y MUT VECM MENOR tipo_dato MAYOR
Rule 14    llamadaF -> ID PIZQ PDER
Rule 15    llamadaF -> ID PIZQ lista_expresiones PDER
Rule 16    lista_expresiones -> lista_expresiones COMA expresion
Rule 17    lista_expresiones -> expresion
Rule 18    bloque -> LLAVEIZQ LLAVEDER
Rule 19    bloque -> LLAVEIZQ instrucciones LLAVEDER
Rule 20    instrucciones -> instrucciones instruccion
Rule 21    instrucciones -> instruccion
Rule 22    instruccion -> print PTCOMA
Rule 23    instruccion -> declaracion PTCOMA
Rule 24    instruccion -> asignacion PTCOMA
Rule 25    instruccion -> if_i
Rule 26    instruccion -> llamadaF PTCOMA
Rule 27    instruccion -> return PTCOMA
Rule 28    instruccion -> loop
Rule 29    instruccion -> break PTCOMA
Rule 30    instruccion -> while
Rule 31    instruccion -> continue PTCOMA
Rule 32    instruccion -> for
Rule 33    instruccion -> insert PTCOMA
Rule 34    instruccion -> asignacionA PTCOMA
Rule 35    instruccion -> push PTCOMA
Rule 36    print -> PRINTLN NOT PIZQ lista_expresiones PDER
Rule 37    return -> RETURN
Rule 38    return -> RETURN expresion
Rule 39    asignacionA -> ID ubicaciones IGUAL expresion
Rule 40    declaracion -> LET MUT ID DOBLEPT tipo_dato IGUAL expresion
Rule 41    declaracion -> LET ID DOBLEPT tipo_dato IGUAL expresion
Rule 42    declaracion -> LET MUT ID IGUAL expresion
Rule 43    declaracion -> LET ID IGUAL expresion
Rule 44    declaracion -> LET MUT ID DOBLEPT dimensiones IGUAL expresion
Rule 45    declaracion -> LET ID DOBLEPT dimensiones IGUAL expresion
Rule 46    declaracion -> LET MUT ID DOBLEPT VECM MENOR tipo_dato MAYOR IGUAL expresion
Rule 47    declaracion -> LET ID DOBLEPT VECM MENOR tipo_dato MAYOR IGUAL expresion
Rule 48    dimensiones -> CORIZQ tipo_dato CORDER
Rule 49    dimensiones -> CORIZQ tipo_dato PTCOMA expresion CORDER
Rule 50    dimensiones -> CORIZQ CORIZQ tipo_dato PTCOMA expresion CORDER PTCOMA expresion CORDER
Rule 51    dimensiones -> CORIZQ CORIZQ CORIZQ tipo_dato PTCOMA expresion CORDER PTCOMA expresion CORDER PTCOMA expresion CORDER
Rule 52    asignacion -> ID IGUAL expresion
Rule 53    if_i -> IF expresion bloque
Rule 54    if_i -> IF expresion bloque ELSE bloque
Rule 55    if_i -> IF expresion bloque listaelseI
Rule 56    if_i -> IF expresion bloque listaelseI ELSE bloque
Rule 57    listaelseI -> listaelseI elseifI
Rule 58    listaelseI -> elseifI
Rule 59    elseifI -> ELSE IF expresion bloque
Rule 60    loop -> LOOP bloque
Rule 61    break -> BREAK
Rule 62    break -> BREAK expresion
Rule 63    while -> WHILE expresion bloque
Rule 64    continue -> CONTINUE
Rule 65    for -> FOR ID IN expresion PUNTO PUNTO expresion bloque
Rule 66    for -> FOR ID IN expresion PUNTO CHARS PIZQ PDER bloque
Rule 67    for -> FOR ID IN expresion bloque
Rule 68    push -> ID PUNTO PUSH PIZQ expresion PDER
Rule 69    insert -> ID PUNTO INSERT PIZQ expresion COMA expresion PDER
Rule 70    expresion -> MENOS expresion
Rule 71    expresion -> expresion MAS expresion
Rule 72    expresion -> expresion MENOS expresion
Rule 73    expresion -> expresion MULTIPLICACION expresion
Rule 74    expresion -> expresion DIVISION expresion
Rule 75    expresion -> expresion MODULO expresion
Rule 76    expresion -> I64 DOBLEPT DOBLEPT POW PIZQ expresion COMA expresion PDER
Rule 77    expresion -> F64 DOBLEPT DOBLEPT POWF PIZQ expresion COMA expresion PDER
Rule 78    expresion -> PIZQ expresion PDER
Rule 79    expresion -> expresion MAYOR expresion
Rule 80    expresion -> expresion MENOR expresion
Rule 81    expresion -> expresion MAYORIGUAL expresion
Rule 82    expresion -> expresion MENORIGUAL expresion
Rule 83    expresion -> expresion IGUALIGUAL expresion
Rule 84    expresion -> expresion DIFERENTE expresion
Rule 85    expresion -> expresion AND expresion
Rule 86    expresion -> expresion OR expresion
Rule 87    expresion -> NOT expresion
Rule 88    expresion -> tostring
Rule 89    expresion -> as
Rule 90    expresion -> abs
Rule 91    expresion -> sqrt
Rule 92    expresion -> if_e
Rule 93    expresion -> llamadaF
Rule 94    expresion -> loop
Rule 95    expresion -> arraycontenido
Rule 96    expresion -> accesoarray
Rule 97    expresion -> referencia
Rule 98    expresion -> len
Rule 99    expresion -> capacity
Rule 100   expresion -> contains
Rule 101   expresion -> clone
Rule 102   expresion -> vector
Rule 103   expresion -> remove
Rule 104   remove -> expresion PUNTO REMOVE PIZQ expresion PDER
Rule 105   contains -> expresion PUNTO CONTAINS PIZQ Y expresion PDER
Rule 106   vector -> VEC NOT CORIZQ lista_expresiones CORDER
Rule 107   vector -> VEC NOT CORIZQ expresion PTCOMA expresion CORDER
Rule 108   vector -> VECM DOBLEPT DOBLEPT NEW PIZQ PDER
Rule 109   vector -> VECM DOBLEPT DOBLEPT WCAPACITY PIZQ expresion PDER
Rule 110   clone -> expresion PUNTO CLONE PIZQ PDER
Rule 111   len -> expresion PUNTO LEN PIZQ PDER
Rule 112   capacity -> expresion PUNTO CAPACITY PIZQ PDER
Rule 113   referencia -> Y MUT ID
Rule 114   accesoarray -> ID ubicaciones
Rule 115   ubicaciones -> ubicaciones ubicacion
Rule 116   ubicaciones -> ubicacion
Rule 117   ubicacion -> CORIZQ expresion CORDER
Rule 118   arraycontenido -> CORIZQ lista_expresiones CORDER
Rule 119   tostring -> expresion PUNTO TOSTRING PIZQ PDER
Rule 120   tostring -> expresion PUNTO TOOWNED PIZQ PDER
Rule 121   as -> expresion AS I64
Rule 122   as -> expresion AS F64
Rule 123   as -> expresion AS USIZE
Rule 124   abs -> expresion PUNTO ABS PIZQ PDER
Rule 125   sqrt -> expresion PUNTO SQRT PIZQ PDER
Rule 126   if_e -> IF expresion LLAVEIZQ instrucciones expresion LLAVEDER
Rule 127   if_e -> IF expresion LLAVEIZQ instrucciones expresion LLAVEDER ELSE LLAVEIZQ instrucciones expresion LLAVEDER
Rule 128   if_e -> IF expresion LLAVEIZQ instrucciones expresion LLAVEDER listaelse
Rule 129   if_e -> IF expresion LLAVEIZQ instrucciones expresion LLAVEDER listaelse ELSE LLAVEIZQ instrucciones expresion LLAVEDER
Rule 130   listaelse -> listaelse elseif
Rule 131   listaelse -> elseif
Rule 132   elseif -> ELSE IF expresion LLAVEIZQ instrucciones expresion LLAVEDER
Rule 133   expresion -> ENTERO
Rule 134   expresion -> DECIMAL
Rule 135   expresion -> ID
Rule 136   expresion -> CARACTER
Rule 137   expresion -> CADENA
Rule 138   expresion -> TRUE
Rule 139   expresion -> FALSE
Rule 140   tipo_dato -> I64
Rule 141   tipo_dato -> F64
Rule 142   tipo_dato -> BOOL
Rule 143   tipo_dato -> CHAR
Rule 144   tipo_dato -> str
Rule 145   tipo_dato -> STRING
Rule 146   tipo_dato -> USIZE
Rule 147   str -> Y STR

Terminals, with rules where they appear

ABS                  : 124
AND                  : 85
AS                   : 121 122 123
BOOL                 : 142
BREAK                : 61 62
CADENA               : 137
CAPACITY             : 112
CARACTER             : 136
CHAR                 : 143
CHARS                : 66
CLONE                : 110
COMA                 : 9 16 69 76 77
CONTAINS             : 105
CONTINUE             : 64
CORDER               : 48 49 50 50 51 51 51 106 107 117 118
CORIZQ               : 48 49 50 50 51 51 51 106 107 117 118
DECIMAL              : 134
DIFERENTE            : 84
DIVISION             : 74
DOBLEPT              : 11 12 13 40 41 44 45 46 47 76 76 77 77 108 108 109 109
ELSE                 : 54 56 59 127 129 132
ENTERO               : 133
F64                  : 77 122 141
FALSE                : 139
FLECHA               : 6 8
FN                   : 5 6 7 8
FOR                  : 65 66 67
I64                  : 76 121 140
ID                   : 5 6 7 8 11 12 13 14 15 39 40 41 42 43 44 45 46 47 52 65 66 67 68 69 113 114 135
IF                   : 53 54 55 56 59 126 127 128 129 132
IGUAL                : 39 40 41 42 43 44 45 46 47 52
IGUALIGUAL           : 83
IN                   : 65 66 67
INSERT               : 69
LEN                  : 111
LET                  : 40 41 42 43 44 45 46 47
LLAVEDER             : 18 19 126 127 127 128 129 129 132
LLAVEIZQ             : 18 19 126 127 127 128 129 129 132
LOOP                 : 60
MAS                  : 71
MAYOR                : 13 46 47 79
MAYORIGUAL           : 81
MENOR                : 13 46 47 80
MENORIGUAL           : 82
MENOS                : 70 72
MODULO               : 75
MULTIPLICACION       : 73
MUT                  : 12 13 40 42 44 46 113
NEW                  : 108
NOT                  : 36 87 106 107
OR                   : 86
PDER                 : 5 6 7 8 14 15 36 66 68 69 76 77 78 104 105 108 109 110 111 112 119 120 124 125
PIZQ                 : 5 6 7 8 14 15 36 66 68 69 76 77 78 104 105 108 109 110 111 112 119 120 124 125
POW                  : 76
POWF                 : 77
PRINTLN              : 36
PTCOMA               : 22 23 24 26 27 29 31 33 34 35 49 50 50 51 51 51 107
PUNTO                : 65 65 66 68 69 104 105 110 111 112 119 120 124 125
PUSH                 : 68
REMOVE               : 104
RETURN               : 37 38
SQRT                 : 125
STR                  : 147
STRING               : 145
TOOWNED              : 120
TOSTRING             : 119
TRUE                 : 138
USIZE                : 123 146
VEC                  : 106 107
VECM                 : 13 46 47 108 109
WCAPACITY            : 109
WHILE                : 63
Y                    : 12 13 105 113 147
error                : 

Nonterminals, with rules where they appear

abs                  : 90
accesoarray          : 96
arraycontenido       : 95
as                   : 89
asignacion           : 24
asignacionA          : 34
bloque               : 5 6 7 8 53 54 54 55 56 56 59 60 63 65 66 67
break                : 29
capacity             : 99
clone                : 101
contains             : 100
continue             : 31
declaracion          : 23
dimensiones          : 12 44 45
elseif               : 130 131
elseifI              : 57 58
expresion            : 16 17 38 39 40 41 42 43 44 45 46 47 49 50 50 51 51 51 52 53 54 55 56 59 62 63 65 65 66 67 68 69 69 70 71 71 72 72 73 73 74 74 75 75 76 76 77 77 78 79 79 80 80 81 81 82 82 83 83 84 84 85 85 86 86 87 104 104 105 105 107 107 109 110 111 112 117 119 120 121 122 123 124 125 126 126 127 127 127 128 128 129 129 129 132 132
for                  : 32
funcion              : 4
funcion_struct       : 2 3
funciones_structs    : 1 2
if_e                 : 92
if_i                 : 25
init                 : 0
insert               : 33
instruccion          : 20 21
instrucciones        : 19 20 126 127 127 128 129 129 132
len                  : 98
lista_expresiones    : 15 16 36 106 118
listaelse            : 128 129 130
listaelseI           : 55 56 57
llamadaF             : 26 93
loop                 : 28 94
parametro            : 9 10
parametros           : 7 8 9
print                : 22
push                 : 35
referencia           : 97
remove               : 103
return               : 27
sqrt                 : 91
str                  : 144
tipo_dato            : 6 8 11 13 40 41 46 47 48 49 50 51
tostring             : 88
ubicacion            : 115 116
ubicaciones          : 39 114 115
vector               : 102
while                : 30

Parsing method: LALR

state 0

    (0) S' -> . init
    (1) init -> . funciones_structs
    (2) funciones_structs -> . funciones_structs funcion_struct
    (3) funciones_structs -> . funcion_struct
    (4) funcion_struct -> . funcion
    (5) funcion -> . FN ID PIZQ PDER bloque
    (6) funcion -> . FN ID PIZQ PDER FLECHA tipo_dato bloque
    (7) funcion -> . FN ID PIZQ parametros PDER bloque
    (8) funcion -> . FN ID PIZQ parametros PDER FLECHA tipo_dato bloque

    FN              shift and go to state 5

    init                           shift and go to state 1
    funciones_structs              shift and go to state 2
    funcion_struct                 shift and go to state 3
    funcion                        shift and go to state 4

state 1

    (0) S' -> init .



state 2

    (1) init -> funciones_structs .
    (2) funciones_structs -> funciones_structs . funcion_struct
    (4) funcion_struct -> . funcion
    (5) funcion -> . FN ID PIZQ PDER bloque
    (6) funcion -> . FN ID PIZQ PDER FLECHA tipo_dato bloque
    (7) funcion -> . FN ID PIZQ parametros PDER bloque
    (8) funcion -> . FN ID PIZQ parametros PDER FLECHA tipo_dato bloque

    $end            reduce using rule 1 (init -> funciones_structs .)
    FN              shift and go to state 5

    funcion_struct                 shift and go to state 6
    funcion                        shift and go to state 4

state 3

    (3) funciones_structs -> funcion_struct .

    FN              reduce using rule 3 (funciones_structs -> funcion_struct .)
    $end            reduce using rule 3 (funciones_structs -> funcion_struct .)


state 4

    (4) funcion_struct -> funcion .

    FN              reduce using rule 4 (funcion_struct -> funcion .)
    $end            reduce using rule 4 (funcion_struct -> funcion .)


state 5

    (5) funcion -> FN . ID PIZQ PDER bloque
    (6) funcion -> FN . ID PIZQ PDER FLECHA tipo_dato bloque
    (7) funcion -> FN . ID PIZQ parametros PDER bloque
    (8) funcion -> FN . ID PIZQ parametros PDER FLECHA tipo_dato bloque

    ID              shift and go to state 7


state 6

    (2) funciones_structs -> funciones_structs funcion_struct .

    FN              reduce using rule 2 (funciones_structs -> funciones_structs funcion_struct .)
    $end            reduce using rule 2 (funciones_structs -> funciones_structs funcion_struct .)


state 7

    (5) funcion -> FN ID . PIZQ PDER bloque
    (6) funcion -> FN ID . PIZQ PDER FLECHA tipo_dato bloque
    (7) funcion -> FN ID . PIZQ parametros PDER bloque
    (8) funcion -> FN ID . PIZQ parametros PDER FLECHA tipo_dato bloque

    PIZQ            shift and go to state 8


state 8

    (5) funcion -> FN ID PIZQ . PDER bloque
    (6) funcion -> FN ID PIZQ . PDER FLECHA tipo_dato bloque
    (7) funcion -> FN ID PIZQ . parametros PDER bloque
    (8) funcion -> FN ID PIZQ . parametros PDER FLECHA tipo_dato bloque
    (9) parametros -> . parametros COMA parametro
    (10) parametros -> . parametro
    (11) parametro -> . ID DOBLEPT tipo_dato
    (12) parametro -> . ID DOBLEPT Y MUT dimensiones
    (13) parametro -> . ID DOBLEPT Y MUT VECM MENOR tipo_dato MAYOR

    PDER            shift and go to state 10
    ID              shift and go to state 9

    parametros                     shift and go to state 11
    parametro                      shift and go to state 12

state 9

    (11) parametro -> ID . DOBLEPT tipo_dato
    (12) parametro -> ID . DOBLEPT Y MUT dimensiones
    (13) parametro -> ID . DOBLEPT Y MUT VECM MENOR tipo_dato MAYOR

    DOBLEPT         shift and go to state 13


state 10

    (5) funcion -> FN ID PIZQ PDER . bloque
    (6) funcion -> FN ID PIZQ PDER . FLECHA tipo_dato bloque
    (18) bloque -> . LLAVEIZQ LLAVEDER
    (19) bloque -> . LLAVEIZQ instrucciones LLAVEDER

    FLECHA          shift and go to state 15
    LLAVEIZQ        shift and go to state 16

    bloque                         shift and go to state 14

state 11

    (7) funcion -> FN ID PIZQ parametros . PDER bloque
    (8) funcion -> FN ID PIZQ parametros . PDER FLECHA tipo_dato bloque
    (9) parametros -> parametros . COMA parametro

    PDER            shift and go to state 17
    COMA            shift and go to state 18


state 12

    (10) parametros -> parametro .

    PDER            reduce using rule 10 (parametros -> parametro .)
    COMA            reduce using rule 10 (parametros -> parametro .)


state 13

    (11) parametro -> ID DOBLEPT . tipo_dato
    (12) parametro -> ID DOBLEPT . Y MUT dimensiones
    (13) parametro -> ID DOBLEPT . Y MUT VECM MENOR tipo_dato MAYOR
    (140) tipo_dato -> . I64
    (141) tipo_dato -> . F64
    (142) tipo_dato -> . BOOL
    (143) tipo_dato -> . CHAR
    (144) tipo_dato -> . str
    (145) tipo_dato -> . STRING
    (146) tipo_dato -> . USIZE
    (147) str -> . Y STR

    Y               shift and go to state 20
    I64             shift and go to state 21
    F64             shift and go to state 22
    BOOL            shift and go to state 23
    CHAR            shift and go to state 24
    STRING          shift and go to state 26
    USIZE           shift and go to state 27

    tipo_dato                      shift and go to state 19
    str                            shift and go to state 25

state 14

    (5) funcion -> FN ID PIZQ PDER bloque .

    FN              reduce using rule 5 (funcion -> FN ID PIZQ PDER bloque .)
    $end            reduce using rule 5 (funcion -> FN ID PIZQ PDER bloque .)


state 15

    (6) funcion -> FN ID PIZQ PDER FLECHA . tipo_dato bloque
    (140) tipo_dato -> . I64
    (141) tipo_dato -> . F64
    (142) tipo_dato -> . BOOL
    (143) tipo_dato -> . CHAR
    (144) tipo_dato -> . str
    (145) tipo_dato -> . STRING
    (146) tipo_dato -> . USIZE
    (147) str -> . Y STR

    I64             shift and go to state 21
    F64             shift and go to state 22
    BOOL            shift and go to state 23
    CHAR            shift and go to state 24
    STRING          shift and go to state 26
    USIZE           shift and go to state 27
    Y               shift and go to state 29

    tipo_dato                      shift and go to state 28
    str                            shift and go to state 25

state 16

    (18) bloque -> LLAVEIZQ . LLAVEDER
    (19) bloque -> LLAVEIZQ . instrucciones LLAVEDER
    (20) instrucciones -> . instrucciones instruccion
    (21) instrucciones -> . instruccion
    (22) instruccion -> . print PTCOMA
    (23) instruccion -> . declaracion PTCOMA
    (24) instruccion -> . asignacion PTCOMA
    (25) instruccion -> . if_i
    (26) instruccion -> . llamadaF PTCOMA
    (27) instruccion -> . return PTCOMA
    (28) instruccion -> . loop
    (29) instruccion -> . break PTCOMA
    (30) instruccion -> . while
    (31) instruccion -> . continue PTCOMA
    (32) instruccion -> . for
    (33) instruccion -> . insert PTCOMA
    (34) instruccion -> . asignacionA PTCOMA
    (35) instruccion -> . push PTCOMA
    (36) print -> . PRINTLN NOT PIZQ lista_expresiones PDER
    (40) declaracion -> . LET MUT ID DOBLEPT tipo_dato IGUAL expresion
    (41) declaracion -> . LET ID DOBLEPT tipo_dato IGUAL expresion
    (42) declaracion -> . LET MUT ID IGUAL expresion
    (43) declaracion -> . LET ID IGUAL expresion
    (44) declaracion -> . LET MUT ID DOBLEPT dimensiones IGUAL expresion
    (45) declaracion -> . LET ID DOBLEPT dimensiones IGUAL expresion
    (46) declaracion -> . LET MUT ID DOBLEPT VECM MENOR tipo_dato MAYOR IGUAL expresion
    (47) declaracion -> . LET ID DOBLEPT VECM MENOR tipo_dato MAYOR IGUAL expresion
    (52) asignacion -> . ID IGUAL expresion
    (53) if_i -> . IF expresion bloque
    (54) if_i -> . IF expresion bloque ELSE bloque
    (55) if_i -> . IF expresion bloque listaelseI
    (56) if_i -> . IF expresion bloque listaelseI ELSE bloque
    (14) llamadaF -> . ID PIZQ PDER
    (15) llamadaF -> . ID PIZQ lista_expresiones PDER
    (37) return -> . RETURN
    (38) return -> . RETURN expresion
    (60) loop -> . LOOP bloque
    (61) break -> . BREAK
    (62) break -> . BREAK expresion
    (63) while -> . WHILE expresion bloque
    (64) continue -> . CONTINUE
    (65) for -> . FOR ID IN expresion PUNTO PUNTO expresion bloque
    (66) for -> . FOR ID IN expresion PUNTO CHARS PIZQ PDER bloque
    (67) for -> . FOR ID IN expresion bloque
    (69) insert -> . ID PUNTO INSERT PIZQ expresion COMA expresion PDER
    (39) asignacionA -> . ID ubicaciones IGUAL expresion
    (68) push -> . ID PUNTO PUSH PIZQ expresion PDER

    LLAVEDER        shift and go to state 30
    PRINTLN         shift and go to state 47
    LET             shift and go to state 48
    ID              shift and go to state 49
    IF              shift and go to state 50
    RETURN          shift and go to state 51
    LOOP            shift and go to state 52
    BREAK           shift and go to state 53
    WHILE           shift and go to state 54
    CONTINUE        shift and go to state 55
    FOR             shift and go to state 56

    instrucciones                  shift and go to state 31
    instruccion                    shift and go to state 32
    print                          shift and go to state 33
    declaracion                    shift and go to state 34
    asignacion                     shift and go to state 35
    if_i                           shift and go to state 36
    llamadaF                       shift and go to state 37
    return                         shift and go to state 38
    loop                           shift and go to state 39
    break                          shift and go to state 40
    while                          shift and go to state 41
    continue                       shift and go to state 42
    for                            shift and go to state 43
    insert                         shift and go to state 44
    asignacionA                    shift and go to state 45
    push                           shift and go to state 46

state 17

    (7) funcion -> FN ID PIZQ parametros PDER . bloque
    (8) funcion -> FN ID PIZQ parametros PDER . FLECHA tipo_dato bloque
    (18) bloque -> . LLAVEIZQ LLAVEDER
    (19) bloque -> . LLAVEIZQ instrucciones LLAVEDER

    FLECHA          shift and go to state 58
    LLAVEIZQ        shift and go to state 16

    bloque                         shift and go to state 57

state 18

    (9) parametros -> parametros COMA . parametro
    (11) parametro -> . ID DOBLEPT tipo_dato
    (12) parametro -> . ID DOBLEPT Y MUT dimensiones
    (13) parametro -> . ID DOBLEPT Y MUT VECM MENOR tipo_dato MAYOR

    ID              shift and go to state 9

    parametro                      shift and go to state 59

state 19

    (11) parametro -> ID DOBLEPT tipo_dato .

    PDER            reduce using rule 11 (parametro -> ID DOBLEPT tipo_dato .)
    COMA            reduce using rule 11 (parametro -> ID DOBLEPT tipo_dato .)


state 20

    (12) parametro -> ID DOBLEPT Y . MUT dimensiones
    (13) parametro -> ID DOBLEPT Y . MUT VECM MENOR tipo_dato MAYOR
    (147) str -> Y . STR

    MUT             shift and go to state 60
    STR             shift and go to state 61


state 21

    (140) tipo_dato -> I64 .

    PDER            reduce using rule 140 (tipo_dato -> I64 .)
    COMA            reduce using rule 140 (tipo_dato -> I64 .)
    LLAVEIZQ        reduce using rule 140 (tipo_dato -> I64 .)
    CORDER          reduce using rule 140 (tipo_dato -> I64 .)
    PTCOMA          reduce using rule 140 (tipo_dato -> I64 .)
    IGUAL           reduce using rule 140 (tipo_dato -> I64 .)
    MAYOR           reduce using rule 140 (tipo_dato -> I64 .)


state 22

    (141) tipo_dato -> F64 .

    PDER            reduce using rule 141 (tipo_dato -> F64 .)
    COMA            reduce using rule 141 (tipo_dato -> F64 .)
    LLAVEIZQ        reduce using rule 141 (tipo_dato -> F64 .)
    CORDER          reduce using rule 141 (tipo_dato -> F64 .)
    PTCOMA          reduce using rule 141 (tipo_dato -> F64 .)
    IGUAL           reduce using rule 141 (tipo_dato -> F64 .)
    MAYOR           reduce using rule 141 (tipo_dato -> F64 .)


state 23

    (142) tipo_dato -> BOOL .

    PDER            reduce using rule 142 (tipo_dato -> BOOL .)
    COMA            reduce using rule 142 (tipo_dato -> BOOL .)
    LLAVEIZQ        reduce using rule 142 (tipo_dato -> BOOL .)
    CORDER          reduce using rule 142 (tipo_dato -> BOOL .)
    PTCOMA          reduce using rule 142 (tipo_dato -> BOOL .)
    IGUAL           reduce using rule 142 (tipo_dato -> BOOL .)
    MAYOR           reduce using rule 142 (tipo_dato -> BOOL .)


state 24

    (143) tipo_dato -> CHAR .

    PDER            reduce using rule 143 (tipo_dato -> CHAR .)
    COMA            reduce using rule 143 (tipo_dato -> CHAR .)
    LLAVEIZQ        reduce using rule 143 (tipo_dato -> CHAR .)
    CORDER          reduce using rule 143 (tipo_dato -> CHAR .)
    PTCOMA          reduce using rule 143 (tipo_dato -> CHAR .)
    IGUAL           reduce using rule 143 (tipo_dato -> CHAR .)
    MAYOR           reduce using rule 143 (tipo_dato -> CHAR .)


state 25

    (144) tipo_dato -> str .

    PDER            reduce using rule 144 (tipo_dato -> str .)
    COMA            reduce using rule 144 (tipo_dato -> str .)
    LLAVEIZQ        reduce using rule 144 (tipo_dato -> str .)
    CORDER          reduce using rule 144 (tipo_dato -> str .)
    PTCOMA          reduce using rule 144 (tipo_dato -> str .)
    IGUAL           reduce using rule 144 (tipo_dato -> str .)
    MAYOR           reduce using rule 144 (tipo_dato -> str .)


state 26

    (145) tipo_dato -> STRING .

    PDER            reduce using rule 145 (tipo_dato -> STRING .)
    COMA            reduce using rule 145 (tipo_dato -> STRING .)
    LLAVEIZQ        reduce using rule 145 (tipo_dato -> STRING .)
    CORDER          reduce using rule 145 (tipo_dato -> STRING .)
    PTCOMA          reduce using rule 145 (tipo_dato -> STRING .)
    IGUAL           reduce using rule 145 (tipo_dato -> STRING .)
    MAYOR           reduce using rule 145 (tipo_dato -> STRING .)


state 27

    (146) tipo_dato -> USIZE .

    PDER            reduce using rule 146 (tipo_dato -> USIZE .)
    COMA            reduce using rule 146 (tipo_dato -> USIZE .)
    LLAVEIZQ        reduce using rule 146 (tipo_dato -> USIZE .)
    CORDER          reduce using rule 146 (tipo_dato -> USIZE .)
    PTCOMA          reduce using rule 146 (tipo_dato -> USIZE .)
    IGUAL           reduce using rule 146 (tipo_dato -> USIZE .)
    MAYOR           reduce using rule 146 (tipo_dato -> USIZE .)


state 28

    (6) funcion -> FN ID PIZQ PDER FLECHA tipo_dato . bloque
    (18) bloque -> . LLAVEIZQ LLAVEDER
    (19) bloque -> . LLAVEIZQ instrucciones LLAVEDER

    LLAVEIZQ        shift and go to state 16

    bloque                         shift and go to state 62

state 29

    (147) str -> Y . STR

    STR             shift and go to state 61


state 30

    (18) bloque -> LLAVEIZQ LLAVEDER .

    FN              reduce using rule 18 (bloque -> LLAVEIZQ LLAVEDER .)
    $end            reduce using rule 18 (bloque -> LLAVEIZQ LLAVEDER .)
    LLAVEDER        reduce using rule 18 (bloque -> LLAVEIZQ LLAVEDER .)
    PRINTLN         reduce using rule 18 (bloque -> LLAVEIZQ LLAVEDER .)
    LET             reduce using rule 18 (bloque -> LLAVEIZQ LLAVEDER .)
    ID              reduce using rule 18 (bloque -> LLAVEIZQ LLAVEDER .)
    IF              reduce using rule 18 (bloque -> LLAVEIZQ LLAVEDER .)
    RETURN          reduce using rule 18 (bloque -> LLAVEIZQ LLAVEDER .)
    LOOP            reduce using rule 18 (bloque -> LLAVEIZQ LLAVEDER .)
    BREAK           reduce using rule 18 (bloque -> LLAVEIZQ LLAVEDER .)
    WHILE           reduce using rule 18 (bloque -> LLAVEIZQ LLAVEDER .)
    CONTINUE        reduce using rule 18 (bloque -> LLAVEIZQ LLAVEDER .)
    FOR             reduce using rule 18 (bloque -> LLAVEIZQ LLAVEDER .)
    MAS             reduce using rule 18 (bloque -> LLAVEIZQ LLAVEDER .)
    MENOS           reduce using rule 18 (bloque -> LLAVEIZQ LLAVEDER .)
    MULTIPLICACION  reduce using rule 18 (bloque -> LLAVEIZQ LLAVEDER .)
    DIVISION        reduce using rule 18 (bloque -> LLAVEIZQ LLAVEDER .)
    MODULO          reduce using rule 18 (bloque -> LLAVEIZQ LLAVEDER .)
    MAYOR           reduce using rule 18 (bloque -> LLAVEIZQ LLAVEDER .)
    MENOR           reduce using rule 18 (bloque -> LLAVEIZQ LLAVEDER .)
    MAYORIGUAL      reduce using rule 18 (bloque -> LLAVEIZQ LLAVEDER .)
    MENORIGUAL      reduce using rule 18 (bloque -> LLAVEIZQ LLAVEDER .)
    IGUALIGUAL      reduce using rule 18 (bloque -> LLAVEIZQ LLAVEDER .)
    DIFERENTE       reduce using rule 18 (bloque -> LLAVEIZQ LLAVEDER .)
    AND             reduce using rule 18 (bloque -> LLAVEIZQ LLAVEDER .)
    OR              reduce using rule 18 (bloque -> LLAVEIZQ LLAVEDER .)
    PUNTO           reduce using rule 18 (bloque -> LLAVEIZQ LLAVEDER .)
    AS              reduce using rule 18 (bloque -> LLAVEIZQ LLAVEDER .)
    LLAVEIZQ        reduce using rule 18 (bloque -> LLAVEIZQ LLAVEDER .)
    PTCOMA          reduce using rule 18 (bloque -> LLAVEIZQ LLAVEDER .)
    PDER            reduce using rule 18 (bloque -> LLAVEIZQ LLAVEDER .)
    COMA            reduce using rule 18 (bloque -> LLAVEIZQ LLAVEDER .)
    CORDER          reduce using rule 18 (bloque -> LLAVEIZQ LLAVEDER .)
    I64             reduce using rule 18 (bloque -> LLAVEIZQ LLAVEDER .)
    F64             reduce using rule 18 (bloque -> LLAVEIZQ LLAVEDER .)
    PIZQ            reduce using rule 18 (bloque -> LLAVEIZQ LLAVEDER .)
    NOT             reduce using rule 18 (bloque -> LLAVEIZQ LLAVEDER .)
    ENTERO          reduce using rule 18 (bloque -> LLAVEIZQ LLAVEDER .)
    DECIMAL         reduce using rule 18 (bloque -> LLAVEIZQ LLAVEDER .)
    CARACTER        reduce using rule 18 (bloque -> LLAVEIZQ LLAVEDER .)
    CADENA          reduce using rule 18 (bloque -> LLAVEIZQ LLAVEDER .)
    TRUE            reduce using rule 18 (bloque -> LLAVEIZQ LLAVEDER .)
    FALSE           reduce using rule 18 (bloque -> LLAVEIZQ LLAVEDER .)
    CORIZQ          reduce using rule 18 (bloque -> LLAVEIZQ LLAVEDER .)
    Y               reduce using rule 18 (bloque -> LLAVEIZQ LLAVEDER .)
    VEC             reduce using rule 18 (bloque -> LLAVEIZQ LLAVEDER .)
    VECM            reduce using rule 18 (bloque -> LLAVEIZQ LLAVEDER .)
    ELSE            reduce using rule 18 (bloque -> LLAVEIZQ LLAVEDER .)


state 31
